website/ui/map/src/components/houseListing/style.css
.houselisting-unselected{
    position:relative;
    height:auto;
    width: calc(100% - 11px);
    left:5px;
    margin-top: 5px;
    background:lightgrey;
    border-radius:10px;
    overflow:hidden;
    
}

.houselisting-groupselect{
    position:relative;
    height:auto;
    width: calc(100% - 11px);
    left:5px;
    margin-top: 5px;
    background:lightgrey;
    border-radius:10px;
    overflow:hidden;
    
}

.houselisting-selected{
    position:relative;
    height:auto;
    width: calc(100% - 11px);
    left:5px;
    margin-top: 5px;
    background:salmon;
    border-radius:10px;
    overflow:hidden;
    
}
.hediting{
    position:absolute;
    width:100%;
    height:100%;
    background:rgb(0,0,0,0.5);
    z-index:1000;
}
.hnot-editing{
    position:absolute;
    width:100%;
    height:100%;
    background:transparent;
    z-index:-2;
    content:'';
}
.hdelete-listing-container{
    position:relative;
    height:30px;
    width:30px;
    left:3px;
    background:transparent;
    z-index:1000;
    border-radius:50%;
    transition: filter 0.2s;
}
.hdelete-listing-container img{
    position:relative;
    width:100%;
    height:100%;
}
.hdelete-listing-container:hover{
    filter:invert(50%);
}
.hprice-container{
    position:relative;
    width:100px;
    height:20px;
    background:transparent;
    
    font-family: "Century Gothic", CenturyGothic, Geneva, AppleGothic, sans-serif;
    font-weight:normal;
    letter-spacing:3px;
}

.houselisting-header{
    position:relative;
    width:100%;
    height:auto;
    background:transparent;
     font-family: "PT Sans", Calibri, Tahoma, sans-serif;
     letter-spacing:5px;
     left:10px;
     top:10px;
    font-size:14px;
     text-transform:uppercase;
     font-weight:bold;
    border-bottom:1px solid black;
    display:flex;
}

.favorite-container{
    position:relative;
    width:15px;
    height:15px;
    left:180px;
    transition:filter 0.2s;
}

.favorite-container:hover{
    filter: invert(0.5);
}
.favorited-container{
    position:relative;
    width:15px;
    height:15px;
    left:180px;
    filter:brightness(0.8) invert(.7) sepia(.9) hue-rotate(-50deg) saturate(2000%); 
}


.cantfavorite-container{
    position:relative;
    width:15px;
    height:15px;
    left:180px;
    filter:invert(50%);
}

.favs-im{
    position:relative;
    width:15px;
    height:15px;
}

.houselisting-body{
    position:relative;
    height:100%;
    top:10px;
    width:100%;
    background:transparent;
}

.number-baths{
    position:relative;
    height:20px;
    width:30%;
    top:5px;
    background:transparent;
}

.number-beds{
    position:relative;
    height:20px;
    width:30%;
    margin-top:10px;
    left:32%;
    top:-25px;
    background:transparent;
    
}
.hicon-container{
    position:relative;
    height:20px;
    width:20px;
    background:transparent;
    left:10px;
}

img{
    height:100%;;
    width:100%;
}

.info-container{
    position:relative;
    height:20px;
    width:50px;
    top:-20px;
    left:40px;
    background:transparent;
}
.square-footage-container{
    position:relative;
    height:20px;
    width:30%;
    left:64%;
    top:-45px;
    background:transparent;
}
.amenities-container{
    position:relative;
    width:100%;
    height:auto;
    background:transparent;
    top:-28px;
    font-family: "PT Sans", Calibri, Tahoma, sans-serif;
    letter-spacing:3px;
    left:10px;
}
.type-container:link{
    color:black;
    text-decoration: none;
}
.type-container:visited { text-decoration: none; color:black;}

